<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferencegroup_notif_title"
        android:icon="@drawable/ic_notifications_on">
        <SwitchPreference
            android:title="@string/preference_notif_announcements_title"
            android:summary="@string/preference_notif_announcements_summary"
            android:key="@string/preference_notif_announcements_key"
            android:defaultValue="@bool/preference_notif_announcements_default"/>

        <SwitchPreference
            android:title="@string/preference_notif_newsletter_title"
            android:summary="@string/preference_notif_newsletter_summary"
            android:key="@string/preference_notif_newsletter_key"
            android:defaultValue="@bool/preference_notif_newsletter_default"/>
    </PreferenceCategory>
</PreferenceScreen>