<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/drawer_navigationgroup"
        android:checkableBehavior="single">
        <item android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home"
            android:checked="true"/>
        <item android:id="@+id/drawer_notifications"
            android:icon="@drawable/ic_announcements"
            android:title="@string/drawer_notifications"/>
        <item android:title="@string/drawer_teachers"
            android:id="@+id/drawer_teachers"
            android:icon="@drawable/ic_teachers" />
        <item android:title="@string/drawer_calendar"
            android:id="@+id/drawer_calendar"
            android:icon="@drawable/ic_calendar"/>
        <item android:title="@string/drawer_resources"
            android:icon="@drawable/ic_resources"
            android:id="@+id/drawer_resources"/>
        <item android:id="@+id/drawer_parents"
            android:icon="@drawable/ic_person"
            android:title="@string/drawer_parents"
            android:visible="false"/>
        <item android:id="@+id/drawer_students"
            android:icon="@drawable/ic_students"
            android:title="@string/drawer_students"
            android:visible="false"/>
        <item android:id="@+id/drawer_newsletter"
            android:icon="@drawable/ic_newsletter"
            android:title="@string/drawer_newsletter"/>
        <item android:id="@+id/drawer_contactus"
            android:icon="@drawable/ic_send"
            android:title="@string/drawer_contactus"/>

        <!--<item android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings"/>-->
        <item android:id="@+id/drawer_debug"
            android:icon="@drawable/ic_debug"
            android:title="@string/drawer_debug"
            android:visible="@bool/debug_mode"/>
    </group>
    <group android:id="@+id/drawer_settingsgroup"
        android:checkableBehavior="none">
        <item android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings"/>
    </group>
</menu>