<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--This file isn't directly used in the app, but I need to have it here so it'll generate R.ids for the buttons-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_contact_call"
        android:text="@string/contact_phone_call"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="contactButtonClicked"
        android:pointerIcon="hand"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_contact_email"
        android:text="@string/contact_email_send"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="contactButtonClicked"
        android:pointerIcon="hand"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_contact_twitter"
        android:text="@string/contact_social_open"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="contactButtonClicked"
        android:pointerIcon="hand"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

</LinearLayout>