<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_ourMission"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:clipToPadding="false">
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                app:layout_widthPercent="100%"
                app:layout_aspectRatio="178%"
                android:id="@+id/imageView_ourMission"
                android:src="@color/colorAccentLighter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_missionHeader"
                android:layout_below="@id/imageView_ourMission"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/home_ourmission"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_missionText"
                android:layout_below="@id/textView_missionHeader"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/home_missiontext"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"/>
        </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:id="@+id/card_openhours">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_hoursHeader"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/home_psa_is_closed"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_hoursText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/home_openhours_text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:id="@+id/card_applyNow">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_applyHeader"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/home_apply_title"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_applyText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/home_apply_text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_applyNow"
                android:onClick="onFabClick"
                android:text="@string/home_apply_now"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>